✨ Added Custom Mod Config Support. (#44)
* Added Custom Mod Config Support.
* Missing JavaDoc